infra/deployment/kustomize/base/dev/deplyoment.yaml
# base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: webapp-image:stable
        ports:
        - name: webapp
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        volumeMounts:
          - name: config-volume
            mountPath: /app/.env
            subPath: .env
      volumes:
        - name: config-volume
          configMap:
            name: webapp-config
